# oleo

./: ChangeLog  Makefile  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  config.cache  config.h  config.status  configure.in  mkinstalldirs  oleobug
Xresources/: Makefile  Makefile.am  Makefile.in  Oleo.en  Oleo.fr  Oleo.nl
afm/: Makefile  Makefile.am  Makefile.in
doc/: Makefile  Makefile.am  Makefile.in  oleo.html  oleo_web.html  texi2html  texi2html.in  texinfo.tex
examples/: Makefile  Makefile.am  Makefile.in
intl/: Makefile  Makefile.am  Makefile.in
lib/: Makefile  Makefile.am  Makefile.in
m4/: Makefile  Makefile.am  Makefile.in  motif.m4  x11.m4
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  afm.c  afm.h  appres.c  appres.h  args.c  args.h  basic.c  basic.h  busi.c  byte-compile.c  byte-compile.h  cell.h  cells.c  cmd.c  cmd.h  csv.c  csv.h  date.c  decompile.c  decompile.h  defun.h  defuns.h  display.c  display.h  epson.c  epson.h  errors.h  eval.c  eval.h  fallback.c  font.c  font.h  foo.csv  foo.mm  format.c  format.h  forminfo.c  (+99 more)
