#
# $Header: /opt/home/papo/cvs/oleo/examples/Makefile.am,v 1.1.1.1 2001/02/10 08:27:04 papo Exp $
#
# Process this file with automake to produce Makefile.in -*- Makefile -*-
#
EXTRA_DIST = nogood.oleo plot.oleo shit.oleo xy.oleo types.oleo \
	q110399.csv loop.oleo formula.sylk paine.slk \
	create_koers.txt data.sql mysql.oleo \
	docs.oleo

MAINTAINERCLEANFILES = Makefile.in

