#
# $Header: /opt/home/papo/cvs/oleo/m4/Makefile.am,v 1.1.1.1 2001/02/10 08:27:04 papo Exp $
#
# Process this file with automake to produce Makefile.in -*- Makefile -*-
#
EXTRA_DIST = gettext.m4 lcmessage.m4 progtest.m4 \
		x11.m4 \
		motif.m4 sciplot.m4 xmhtml.m4 cxx.m4

MAINTAINERCLEANFILES = Makefile.in

